src/App.css
/* ... */
body {
  margin: 0;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

/* -----------------------------------LANDING PAGE STYLE---------------------------------------  */
.wrapper {
  height: 100vh;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.wrapper h1 {
  position: relative;
  bottom: 150px;
  font-size: 6rem;
  font-family: "LeagueSpartan-Bold";
}
.circle {
  transform: scale(1.5);
  padding: 0;
  width: 20em;
  height: 20em;
  border-radius: 50% 50% 0 0;
  /* list-style: none; */
  overflow: hidden;
}
.logo {
  transform: scale(0.98);
  display: block;
  position: relative;
  bottom: 161px;
  left: -1px;
}
.enter {
  position: relative;
  bottom: 100px;
  font-size: 1.5rem;
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 10rem;
  height: 3rem;
  border-radius: 250px;
  background-color: #5da271;
  -moz-box-shadow: 0px 0px 10px 2px black;
  -webkit-box-shadow: 0px 0px 10px 2px black;
  box-shadow: 0px 0px 15px 2px black;
  cursor: pointer;
  transform: translatey(0px);
  animation: float 6s ease-in-out infinite;
  opacity: 0.8;
}
.enter:hover {
  opacity: 1;
}

.button {
  position: absolute;
  left: -100%;
  width: 200%;
  height: 200%;
  text-align: center;
  transform: skewY(60deg) rotate(15deg);
  padding-top: 20px;
}
.green {
  transform: rotate(0deg) skewY(-60deg);
}
.darkBlue {
  transform: rotate(30deg) skewY(-60deg);
}
.pink {
  transform: rotate(60deg) skewY(-60deg);
}
.blue {
  transform: rotate(90deg) skewY(-60deg);
}

.purple {
  transform: rotate(120deg) skewY(-60deg);
}
.white {
  transform: rotate(150deg) skewY(-60deg);
}
.beige {
  transform: rotate(180deg) skewY(-60deg);
}
.gray {
  transform: rotate(210deg) skewY(-60deg);
}
.black {
  transform: rotate(240deg) skewY(-60deg);
}
.red {
  transform: rotate(270deg) skewY(-60deg);
}
.orange {
  transform: rotate(300deg) skewY(-60deg);
}
.yellow {
  transform: rotate(330deg) skewY(-60deg);
}
.hidden {
  display: none;
}

@keyframes float {
  0% {
    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
    transform: translatey(0px);
  }
  50% {
    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
    transform: translatey(-20px);
  }
  100% {
    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
    transform: translatey(0px);
  }
}

/* ---------------------------------------Musisphere Page------------------------------------ */

.musispherePage {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.keyAndSphere {
  width: 100vw;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  justify-items:stretch;
  margin-top: -30px;
  flex-wrap: wrap;
}
.colorKey {
  height: 360px;
  width: 22%;
  border: 1px solid gray;
  display: flex;
  flex-direction: column;
  margin-top: 90px;
  box-sizing: border-box;
}
.keyColors {
  display: flex;
  position: relative;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
  width: 100%;
  height: 60px;
  padding-right: 7%;
  border-bottom: 1px solid gray;
  box-shadow: inset 2px 2px 0px 1px rgba(70, 70, 70, 0.2),
    inset -2px -2px 0px 1px rgba(0, 0, 0, 0.3);
}
.keyColors:hover {
  cursor: pointer;
  background-color: rgba(100, 100, 100, 0.2);
}
.keyColors p {
  padding-top: 15px;
}
.keyModal {
  height: 50px;
  width: 50px;
  overflow: hidden;
  margin-left: 15px;
  margin-top: 5px;
  box-sizing: border-box;
}
#left-colors {
  margin-left: 75px;
}
#right-colors {
  margin-right: 75px;
}
.musisphere {
  transform: scale(1.5);
  overflow: hidden;
  position: relative;
  box-sizing: border-box;
  padding: 0;
  width: 30em;
  height: 30em;
  border-radius: 50%;
  list-style: none;
  box-shadow: inset 0px 0px 0px 20px rgba(0, 0, 0, 0.75);
  animation: spinningWheel linear 60s infinite;
}
.segment {
  overflow: hidden;
  position: absolute;
  top: 0;
  right: 0;
  width: 50%;
  height: 50%;
  transform-origin: 0% 100%;
}
.segment:hover {
  cursor: pointer;
  opacity: 0.8;
}

.red {
  background-color: #ae2012;
  transform: rotateZ(30deg) skewY(-60);
}
.orange {
  background-color: #bb3e03;
  transform: rotateZ(60deg) skewY(-60);
}
.yellow {
  background-color: #ee9b00;
  transform: rotateZ(90deg) skewY(-60);
}
.green {
  background-color: #5da271;
  transform: rotateZ(120deg) skewY(-60);
}
.darkBlue {
  background-color: #005f73;
  transform: rotateZ(150deg) skewY(-60);
}
.pink {
  background-color: #d87cac;
  transform: rotateZ(180deg) skewY(-60);
}
.purple {
  background-color: #745c97;
  transform: rotateZ(210deg) skewY(-60);
}
.blue {
  background-color: #31afd4;
  transform: rotateZ(240deg) skewY(-60);
}

.white {
  background-color: #f7f0f0;
  transform: rotateZ(270deg) skewY(-60);
}
.beige {
  background-color: #f3dfc1;
  transform: rotateZ(300deg) skewY(-60);
}
.gray {
  background-color: #696773;
  transform: rotateZ(330deg) skewY(-60);
}
.black {
  background-color: #050505;
  transform: rotateZ(0deg) skewY(-60);
}

.redBgColour {
  background-color: #ae1f1283;
}
.orangeBgColour {
  background-color: #bb3d0385;
}
.yellowBgColour {
  background-color: #ee9b0080;
}
.greenBgColour {
  background-color: #5da27080;
}
.darkBlueBgColour {
  background-color: #00607381;
}
.pinkBgColour {
  background-color: #d87cac88;
}
.purpleBgColour {
  background-color: #745c9786;
}
.blueBgColour {
  background-color: #31aed483;
}

.whiteBgColour {
  background-color: #f7f0f083;
}
.beigeBgColour {
  background-color: #f3dfc186;
}
.grayBgColour {
  background-color: #69677385;
}
.blackBgColour {
  background-color: #050505ad;
}

.likeButton {
  align-self: center;
  font-size: 25px;
}

@keyframes spinningWheel {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.mediaPlayer {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-content: center;
  box-sizing: border-box;
  padding-top: 40px;
}
/* ... */

